
      \item Use of \code{tapply()} with a 0-length \code{INDEX} list is
      deprecated with a warning.

      \item \samp{Translation} packages are deprecated.

      \item Calling \code{rep()} or \code{rep.int()} on a pairlist is
      deprecated and will give a warning.  In any case, \code{rep()}
      converted a pairlist to a list so you may as well do that
      explicitly.
    }
  }

  \subsection{BUG FIXES}{
    \itemize{
      \item On Windows, starting \command{Rterm} via \command{R.exe}
      caused Ctrl-C to misbehave.  (\PR{14948})

      \item The \code{tools::latexToUtf8()} function missed conversions that
      were contained within braces.

      \item Long timezone specifications (such as a file name preceded
      by \code{:}) could crash \code{as.POSIXlt}.  (\PR{14945})

      \item \code{R CMD build --resave-data} could fail if there was no
      \file{data} directory but there was an \file{R/sysdata.rda} file.
      (\PR{14947})

      \item \code{is.na()} misbehaved on a 0-column data frame.
      (\PR{14959})

      \item \code{anova.lmlist()} failed if \code{test} was
      supplied.  (\PR{14960})

      It was unable to compute Cp tests for object of class \code{"lm"}
      (it assumed class \code{"glm"}).

      \item The \code{formula} method for \code{sunflowerplot()} now
      allows \code{xlab} and \code{ylab} to be set.  (Reported by Gerrit
      Eichner.)

      \item The \code{"POSIXt"} and \code{"Date"} methods for \code{hist()}
      could fail on Windows where adjustments to the right-hand boundary
      crossed a DST transition time.

      \item On Windows, the code in \code{as.POSIXct()} to handle
      incorrectly specified \code{isdst} fields might have resulted in
      \code{NA} being returned.

      \item \code{aov()} and \code{manova()} gave spurious warning about
      singular error model in the multiresponse case.

      \item In \code{ns()} and \code{bs()}, specifying \code{knots=NULL}